<resources>
    <string name="app_name">Support Genie</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_star">favorite</string>
    <string name="content_description_logo">Company Logo</string>
    <string name="title_activity_chat">Chat</string>
    <string name="send">Send</string>
    <string name="send_message">Message to Send</string>

    <string name="title_activity_image">Image Zoom</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_pdf">Pdf</string>

    <string name="camera">Camera</string>
    <string name="add">Add</string>
    <string name="endchat">End Chat</string>
    <string name="attach">Attach File</string>

    <string name="imagezoom">Image Zoom</string>

    <string name="agentname">Agent Name</string>
    <string name="msgtime">Message Time</string>

    <string name="pdfmsg">PDF Message Text</string>
    <string name="chatmsg">Chat Message Text</string>

    <string name="exo_rew">Rewind Song</string>
    <string name="exo_play">Play Song</string>
    <string name="exo_pause">Pause Song</string>
    <string name="exo_ffwd">Forward Song</string>

    <string name="senderphoto">Sender Photo</string>
    <string name="messageimage">Message Image</string>

    <string name="imgthumbnail">Image Thumbnail</string>

    <string name="hello">Hello there</string>
</resources>
