<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_padding">

<!--    android:background="@android:color/white"-->

    <!--<ProgressBar-->
    <!--android:id="@+id/progressBarVideoView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="100dp"-->
    <!--android:visibility="visible"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/ivSenderPhoto"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:contentDescription="@string/senderphoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvSenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/agentname"
        android:justificationMode="inter_word"
        android:textColor="#008040"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/ivSenderPhoto"
        app:layout_constraintTop_toTopOf="parent" />
    <!--<ImageView-->
    <!--android:id="@+id/ivMessageImage"-->
    <!--android:hint="Chat Message Text"-->
    <!--android:visibility="visible"-->
    <!--android:layout_width="150dp"-->
    <!--android:layout_height="150dp"-->
    <!--app:srcCompat="@mipmap/ic_launcher"-->
    <!--app:layout_constraintStart_toEndOf="@+id/ivSenderPhoto"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/tvSenderName"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--android:layout_marginStart="4dp"-->
    <!--android:layout_marginTop="14dp"-->
    <!--/>-->
    <ImageView
        android:id="@+id/imgThumbnail"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/imgthumbnail"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivSenderPhoto"
        app:layout_constraintTop_toBottomOf="@+id/tvSenderName" />

    <ImageView
        android:id="@+id/imgMiniThumbnail"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/imgthumbnail"
        android:src="@drawable/play_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivSenderPhoto"
        app:layout_constraintTop_toBottomOf="@+id/tvSenderName"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvMessageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/msgtime"
        android:textColor="#008040"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
